unpackaged/main/default/objects/ComisionMovilidad__c/ComisionMovilidad__c.object-meta.xml
<CustomObject>
    <label>Comisión Movilidad</label>
    <nameField>
        <label>Fraccionamiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comisiones Movilidad</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>