unpackaged/main/default/objects/ComisionMovilidad__c/fields/Empleado__c.field-meta.xml
<CustomField>
    <fullName>Empleado__c</fullName>
    <label>Empleado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>