unpackaged/main/default/objects/ComisionMovilidad__c/fields/Equipovta_comi__c.field-meta.xml
<CustomField>
    <fullName>Equipovta_comi__c</fullName>
    <label>Equipo de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>