unpackaged/main/default/objects/ComisionMovilidad__c/fields/Etapvta_comi__c.field-meta.xml
<CustomField>
    <fullName>Etapvta_comi__c</fullName>
    <label>Etapa de la Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>