unpackaged/main/default/objects/ComisionMovilidad__c/fields/Nomcte_comi__c.field-meta.xml
<CustomField>
    <fullName>Nomcte_comi__c</fullName>
    <label>Nombre del Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>