unpackaged/main/default/objects/ComisionMovilidad__c/fields/Numplan_comi__c.field-meta.xml
<CustomField>
    <fullName>Numplan_comi__c</fullName>
    <label>Codigo Plan de Comisión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>