unpackaged/main/default/objects/ComisionMovilidad__c/fields/Periodopag_comi__c.field-meta.xml
<CustomField>
    <fullName>Periodopag_comi__c</fullName>
    <label>Periodo de Pago</label>
    <length>30</length>
    <type>Text</type>
</CustomField>