unpackaged/main/default/objects/ComisionMovilidad__c/fields/Plancomi_comi__c.field-meta.xml
<CustomField>
    <fullName>Plancomi_comi__c</fullName>
    <label>Plan de Comisión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>