unpackaged/main/default/objects/ComisionMovilidad__c/fields/Tipoced_comi__c.field-meta.xml
<CustomField>
    <fullName>Tipoced_comi__c</fullName>
    <label>Tipo de Cedula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>