unpackaged/main/default/objects/ComisionMovilidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Periodopag_comi__c</columns>
    <columns>Empleado__c</columns>
    <columns>Etapvta_comi__c</columns>
    <columns>Equipovta_comi__c</columns>
    <columns>Plancomi_comi__c</columns>
    <columns>Tipoced_comi__c</columns>
    <columns>Nomcte_comi__c</columns>
    <columns>Numplan_comi__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>